# wyoming-whisper-trt

./: .dockerignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arm64  Dockerfile.igpu  GitVersion.yml  README.md  docker-compose-github-igpu.yaml  docker-compose-github.yaml  docker-compose-igpu.yaml  docker-compose.yaml  pyproject.toml  pyrightconfig.json  renovate.json  requirements.txt  requirements_dev.txt  run.sh  setup.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: black.yml  codeql.yml  docker-build-check.yml  publish_container.yaml  pylint.yml  pyright.yml  release.yaml  ruff.yml  snyk-security.yml  test.yml
examples/: live_transcription.py  profile_backend.py  transcribe.py
examples/ros2/: whisper_trt_node.py  whisper_trt_pipeline.py
patches/: README.md  torch2trt-pytorch29-dynamic-shapes.patch
script/: _common.py  benchmark  format  layer_report  lint  package  prepare_eval_set  run  setup  test
tests/: test_faster_whisper.py  test_import.py  test_large_model_optimizations.py  test_workspace.py  test_wyoming_whisper_trt.py
whisper_trt/: __init__.py  __version__.py  _decoder.py  _onnx_compat.py  cache.py  model.py  utils.py
wyoming_whisper_trt/: __main__.py  handler.py
